@@ -1,3 +1,4 @@
+2015-03-30: add Swisstom's LQ3 fie format support
 2015-03-29: new background colour for 3.8
 2015-03-29: make caching consistent, add cache to inv_solve and fwd_solve
 2015-03-29: make EIDORS more verbose: default log_level = 3
